# sabbatical-2024-spring

./: .gitignore  README.md  activities.html  background.html  backmatter-1.html  frontmatter-1.html  index.html  outcomes.html  pyproject.toml  references-backmatter.html  sabbatical-proposal.html
docs/: activities.html  background.html  backmatter-1.html  frontmatter-1.html  index.html  my-great-article.html  outcomes.html  references-backmatter.html  sabbatical-proposal.html  section-1.html  section-2.html
docs/knowl/: biblio-aim.html  biblio-aisl.html  biblio-atlas.html  biblio-braille.html  biblio-calcplot3d.html  biblio-canvas.html  biblio-checkit.html  p-1.html  (+62 more)
knowl/: biblio-aim.html  biblio-aisl.html  biblio-atlas.html  biblio-braille.html  biblio-buzzard.html  biblio-calcplot3d.html  biblio-canvas.html  biblio-checkit.html  biblio-cyber-educause.html  biblio-cyber-nsf.html  biblio-cyber-researchgov.html  biblio-ghclontz.html  biblio-high-compute.html  biblio-ifat.html  biblio-iuse.html  biblio-lean.html  biblio-logistics.html  biblio-mathdb.html  biblio-mathlib.html  biblio-mathse-search.html  biblio-mo-search.html  biblio-pibase.html  biblio-pose.html  biblio-pretext.html  biblio-prez.html  biblio-repo.html  biblio-reu.html  biblio-scheepers.html  biblio-scratchee.html  biblio-steen.html  biblio-tbil-award.html  biblio-tip-announce.html  blockquote-1.html  p-1.html  p-10.html  p-11.html  p-12.html  p-13.html  p-14.html  p-15.html  (+27 more)
pdf/: main.tex
publication/: publication.ptx
source/: activities.ptx  background.ptx  main.ptx  outcomes.ptx  references.ptx
