[tool.poetry]
name = "sabbatical-2024-spring"
version = "0.1.0"
description = ""
authors = ["Steven Clontz <steven.clontz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
pretext = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
